# atomic_enum

./: Cargo.toml  README.md
src/: lib.rs
tests/: cfg.rs  nostd.rs  with_display.rs
