[package]
name = "atomic_enum"
version = "0.2.0"
authors = ["Thomas Bächler <thomas.baechler@gmx.de>"]
edition = "2021"

description = "An attribute to create an atomic wrapper around a C-style enum"
repository = "https://github.com/brain0/atomic_enum"
keywords = ["atomic", "enum"]
categories = ["concurrency"]
license = "MIT"

[badges]
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.50", features = ["full"] }
quote = "1.0.35"
proc-macro2 = "1.0.78"
